# KNN

./: CMakeLists.txt  ImageMaker.cpp  ImageMaker.h  KNNImageClassifier.cpp  KNNImageClassifier.h
jellybean_crops/AW_Cream_Soda/: AW_Cream_Soda_0.ppm  AW_Cream_Soda_1.ppm  AW_Cream_Soda_10.ppm  AW_Cream_Soda_11.ppm  AW_Cream_Soda_12.ppm  AW_Cream_Soda_13.ppm  AW_Cream_Soda_14.ppm  AW_Cream_Soda_15.ppm  AW_Cream_Soda_16.ppm  AW_Cream_Soda_2.ppm  AW_Cream_Soda_3.ppm  AW_Cream_Soda_4.ppm  AW_Cream_Soda_5.ppm  AW_Cream_Soda_6.ppm  AW_Cream_Soda_7.ppm  AW_Cream_Soda_8.ppm  AW_Cream_Soda_9.ppm
jellybean_crops/AW_Root_Beer/: AW_Root_Beer_0.ppm  AW_Root_Beer_1.ppm  AW_Root_Beer_10.ppm  AW_Root_Beer_11.ppm  AW_Root_Beer_12.ppm  AW_Root_Beer_13.ppm  AW_Root_Beer_14.ppm  AW_Root_Beer_15.ppm  AW_Root_Beer_16.ppm  AW_Root_Beer_17.ppm  AW_Root_Beer_18.ppm  AW_Root_Beer_2.ppm  AW_Root_Beer_3.ppm  AW_Root_Beer_4.ppm  AW_Root_Beer_5.ppm  AW_Root_Beer_6.ppm  AW_Root_Beer_7.ppm  AW_Root_Beer_8.ppm  AW_Root_Beer_9.ppm
jellybean_crops/Berry_Blue/: Berry_Blue_0.ppm  Berry_Blue_1.ppm  Berry_Blue_10.ppm  Berry_Blue_11.ppm  Berry_Blue_12.ppm  Berry_Blue_13.ppm  Berry_Blue_14.ppm  Berry_Blue_15.ppm  Berry_Blue_16.ppm  Berry_Blue_2.ppm  Berry_Blue_3.ppm  Berry_Blue_4.ppm  Berry_Blue_5.ppm  Berry_Blue_6.ppm  Berry_Blue_7.ppm  Berry_Blue_8.ppm  Berry_Blue_9.ppm
jellybean_crops/Blueberry/: Blueberry_0.ppm  Blueberry_1.ppm  Blueberry_10.ppm  Blueberry_11.ppm  Blueberry_12.ppm  Blueberry_13.ppm  Blueberry_14.ppm  Blueberry_15.ppm  Blueberry_16.ppm  Blueberry_2.ppm  Blueberry_3.ppm  Blueberry_4.ppm  Blueberry_5.ppm  Blueberry_6.ppm  Blueberry_7.ppm  Blueberry_8.ppm  Blueberry_9.ppm
jellybean_crops/Bubble_Gum/: Bubble_Gum_0.ppm  Bubble_Gum_1.ppm  Bubble_Gum_10.ppm  Bubble_Gum_11.ppm  Bubble_Gum_12.ppm  Bubble_Gum_13.ppm  Bubble_Gum_14.ppm  Bubble_Gum_15.ppm  Bubble_Gum_16.ppm  Bubble_Gum_2.ppm  Bubble_Gum_3.ppm  Bubble_Gum_4.ppm  Bubble_Gum_5.ppm  Bubble_Gum_6.ppm  Bubble_Gum_7.ppm  Bubble_Gum_8.ppm  Bubble_Gum_9.ppm
jellybean_crops/Buttered_Popcorn/: Buttered_Popcorn_0.ppm  Buttered_Popcorn_1.ppm  Buttered_Popcorn_10.ppm  Buttered_Popcorn_11.ppm  Buttered_Popcorn_12.ppm  Buttered_Popcorn_13.ppm  Buttered_Popcorn_14.ppm  Buttered_Popcorn_15.ppm  Buttered_Popcorn_16.ppm  Buttered_Popcorn_2.ppm  Buttered_Popcorn_3.ppm  Buttered_Popcorn_4.ppm  Buttered_Popcorn_5.ppm  Buttered_Popcorn_6.ppm  Buttered_Popcorn_7.ppm  Buttered_Popcorn_8.ppm  Buttered_Popcorn_9.ppm
jellybean_crops/Cappuccino/: Cappuccino_0.ppm  Cappuccino_1.ppm  Cappuccino_10.ppm  Cappuccino_11.ppm  Cappuccino_12.ppm  Cappuccino_13.ppm  Cappuccino_14.ppm  Cappuccino_15.ppm  Cappuccino_16.ppm  Cappuccino_2.ppm  Cappuccino_3.ppm  Cappuccino_4.ppm  Cappuccino_5.ppm  Cappuccino_6.ppm  Cappuccino_7.ppm  Cappuccino_8.ppm  Cappuccino_9.ppm
jellybean_crops/Caramel_Corn/: Caramel_Corn_0.ppm  Caramel_Corn_1.ppm  Caramel_Corn_10.ppm  Caramel_Corn_11.ppm  Caramel_Corn_12.ppm  Caramel_Corn_13.ppm  Caramel_Corn_14.ppm  Caramel_Corn_15.ppm  Caramel_Corn_16.ppm  Caramel_Corn_17.ppm  Caramel_Corn_18.ppm  Caramel_Corn_2.ppm  Caramel_Corn_3.ppm  Caramel_Corn_4.ppm  Caramel_Corn_5.ppm  Caramel_Corn_6.ppm  Caramel_Corn_7.ppm  Caramel_Corn_8.ppm  Caramel_Corn_9.ppm
jellybean_crops/Chili_Mango/: Chili_Mango_0.ppm  Chili_Mango_1.ppm  Chili_Mango_10.ppm  Chili_Mango_11.ppm  Chili_Mango_12.ppm  Chili_Mango_13.ppm  Chili_Mango_14.ppm  Chili_Mango_15.ppm  Chili_Mango_16.ppm  Chili_Mango_17.ppm  Chili_Mango_18.ppm  Chili_Mango_2.ppm  Chili_Mango_3.ppm  Chili_Mango_4.ppm  Chili_Mango_5.ppm  Chili_Mango_6.ppm  Chili_Mango_7.ppm  Chili_Mango_8.ppm  Chili_Mango_9.ppm
jellybean_crops/Chocolate_Pudding/: Chocolate_Pudding_0.ppm  Chocolate_Pudding_1.ppm  Chocolate_Pudding_10.ppm  Chocolate_Pudding_11.ppm  Chocolate_Pudding_12.ppm  Chocolate_Pudding_13.ppm  Chocolate_Pudding_14.ppm  Chocolate_Pudding_15.ppm  Chocolate_Pudding_16.ppm  Chocolate_Pudding_17.ppm  Chocolate_Pudding_18.ppm  Chocolate_Pudding_2.ppm  Chocolate_Pudding_3.ppm  Chocolate_Pudding_4.ppm  Chocolate_Pudding_5.ppm  Chocolate_Pudding_6.ppm  Chocolate_Pudding_7.ppm  Chocolate_Pudding_8.ppm  Chocolate_Pudding_9.ppm
jellybean_crops/Coconut/: Coconut_0.ppm  Coconut_1.ppm  Coconut_10.ppm  Coconut_11.ppm  Coconut_12.ppm  Coconut_13.ppm  Coconut_14.ppm  Coconut_15.ppm  Coconut_16.ppm  Coconut_2.ppm  Coconut_3.ppm  Coconut_4.ppm  Coconut_5.ppm  Coconut_6.ppm  Coconut_7.ppm  Coconut_8.ppm  Coconut_9.ppm
unit_tests/: KNNImageClassifier_tests.cpp
(+746 files in other folders)
